# steven-universe

./: .gitignore  README.md
.github/workflows/: deploy-personal-website.yml
docs/: lxc-setup.md
js/apps/personal-website/: README.md
js/apps/personal-website/.vercel/: project.json
python/libs/shared-schemas/: .gitignore  README.md  pyproject.toml
python/libs/shared-schemas/shared_schemas/: __init__.py  common.py  file_service.py  gpu_service.py  web_server.py
python/services/file-management/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt
python/services/file-management/app/: main.py
python/services/file-management/app/api/: internal.py  public.py  signed.py
python/services/file-management/app/core/: auth.py  config.py
python/services/file-management/app/s3/: client.py  config.py
python/services/file-management/app/utils/: content_type.py  streaming.py
python/services/file-management/scripts/: deploy.sh
python/services/gpu-server/: .dockerignore  .env.example  Dockerfile  README.md  SERVER_DESIGN.md  requirements-dev.txt  requirements.txt
python/services/gpu-server/app/: main.py
python/services/gpu-server/app/api/: health.py  sessions.py  tasks.py
python/services/gpu-server/app/config/: model_paths.yaml  (+3 more)
python/services/gpu-server/scripts/: deploy.sh
python/services/web-server/: .env  .env.example  Dockerfile  README.md  requirements.txt
python/services/web-server/app/: __init__.py  main.py
python/services/web-server/scripts/: deploy.sh
python/workers/gpu-server/: README.md
(+35 files in other folders)
