[project]
name = "shared-schemas"
version = "0.1.0"
description = "Shared API schemas for steven-universe services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_schemas*"]
